Bug 1215058 - Fix various OOM handling issues related to off-thread compilation r=jandem